# brpc-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
brpc-build/: Cargo.toml
brpc-build/src/: lib.rs
brpc-protoc-plugin/: Cargo.toml  build.rs
brpc-protoc-plugin/src/: brpc_generator.cpp  main.rs
brpc-sys/: Cargo.toml  build.rs
brpc-sys/src/: ffi.cpp  ffi.rs  lib.rs  zero_copy.cpp  zero_copy.rs
examples/: Cargo.toml  build.rs
examples/echo/: client.rs  echo.proto  server.rs
src/: channel.rs  controller.rs  error.rs  lib.rs  server.rs
